# Agent

./: .gitignore  COLAB_SETUP.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
src/: __init__.py  main.py
src/crews/: sourcing_crew.py  vetting_crew.py
src/flow/: __init__.py  search_flow.py  state.py
src/tools/: synthetic_data.py
